--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=board
+# db source url
+spring.datasource.url=jdbc:mysql://localhost:3306/springboard?useSSL=true&useUnicode=true&serverTimezone=Asia/Seoul
+# db response name
+spring.datasource.username=root
+# db response password
+spring.datasource.password=
+# jpa
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+#메시지, 에러 관리
+spring.messages.basename=messages,errors
