--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // db
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    // jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
